Fix svg alignment problem

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
 
 }
 
+svg {
+  stroke: none;
+}
+
 .icon-container {
   display: flex;
   flex-wrap: wrap;
